Adding some extra pieces to portfolio, changed index to html document

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ Copyright 2012 Donna Almendrala (see AUTHORS)
                         <a class="fancybox" title="8-bit pixel animated banner for Serverdm.net (2012)" rel="misc" href="images/mbl_2.gif">Misc. Banners & Logos</a>
                         <a class="fancybox" title="Banner detail for Wayfarersofoss.us (2012)" rel="misc" href="images/mbl_3.png">Misc. Banners & Logos</a>
                         <a class="fancybox" title="Collaborative t-shirt design with Jason Lutes for LutesCon 2011 (2011)" rel="misc" href="images/mbl_4.png">Misc. Banners & Logos</a>
+                        <a class="fancybox" title="Business Card Design for The Crossing: MERGE (2012)" rel="misc" href="images/mbl_5.png">Misc. Banners & Logos</a>
+                        <a class="fancybox" title="Letterhead Design for Donna Almendrala Comics(2011)" rel="misc" href="images/letterhead-paper.png">Misc. Banners & Logos</a>
+                        <a class="fancybox" title="Envelope Letterhead Design for Donna Almendrala Comics (2011)" rel="misc" href="images/letterhead-envelope.png">Misc. Banners & Logos</a>
+                        <a class="fancybox" title="Business Card Design for Donna Almendrala Comics (2011)" rel="misc" href="images/letterhead-business-card.png">Misc. Banners & Logos</a>
                     </div>
                 </div>
         </div>
