Removing Oranda URL

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@ Copyright 2012 Donna Almendrala (see AUTHORS)
                 </div>
             
                 <div id="s2" class="tintedWindow icon-zoom-in">
-                    <a class="fancybox" title="Site redesign with Shopify custom template for Oranda.org (2012)" rel="oranda" href="images/oranda_1.png">Oranda.org</a>
+                    <a class="fancybox" title="Site redesign with Shopify custom template for Oranda (2012)" rel="oranda" href="images/oranda_1.png">Oranda</a>
                     <div class="description hidden">
-                        <div class="projectTitle">Oranda.org</div>
+                        <div class="projectTitle">Oranda</div>
                         <div class="projectMethods">Custom Shopify &bull; HTML &bull; CSS &bull; JS</div>
                     </div>
                     <div class="hidden">
-                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda.org (2012)" rel="oranda" href="images/oranda_2.png">Oranda.org</a>
-                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda.org (2012)" rel="oranda" href="images/oranda_3.png">Oranda.org</a>
-                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda.org (2012)" rel="oranda" href="images/oranda_4.png">Oranda.org</a>
-                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda.org (2012)" rel="oranda" href="images/oranda_5.png">Oranda.org</a>
+                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda (2012)" rel="oranda" href="images/oranda_2.png">Oranda</a>
+                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda (2012)" rel="oranda" href="images/oranda_3.png">Oranda</a>
+                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda (2012)" rel="oranda" href="images/oranda_4.png">Oranda</a>
+                        <a class="fancybox" title="Site redesign with Shopify custom template for Oranda (2012)" rel="oranda" href="images/oranda_5.png">Oranda</a>
                     </div>
                 </div>
            
